add checkService and implement file ext, name, size methods

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <commons.codec.version>1.11</commons.codec.version>
+        <commons.io.version>2.6</commons.io.version>
         <lombock.version>1.16.20</lombock.version>
     </properties>
 
@@ -35,6 +36,11 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>${commons.codec.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons.io.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
